k8s/Household.yaml
# household Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: household
spec:
  replicas: 1
  selector:
    matchLabels:
      app: household
  template:
    metadata:
      labels:
        app: household
    spec:
      containers:
      - name: household
        image: ghcr.io/laoz573/household:1.0.2
        ports:
        - containerPort: 8080

---

# household Service
apiVersion: v1
kind: Service
metadata:
  name: household
spec:
  type: ClusterIP
  clusterIP: 10.108.223.38  # 固定したいIPを指定
  selector:
    app: household
  ports:
  - port: 80
    targetPort: 8080
