k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: household-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: household.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: household
            port:
              number: 8080
